layout-responsivo-alinhamento

--- a/css/style.css
+++ b/css/style.css
@@ -57,13 +57,13 @@ a {
     }
 
     h1{
-        text-align: center;
+        text-align: left;
         font-size: 24px;
         padding: 10px;
     }
 
     p{
-        text-align: center;
+        text-align: left;
         font-size: 16px;
         padding: 10px;
     }
@@ -75,7 +75,7 @@ a {
     }
 
     .btn-group {
-        text-align: center;
+        text-align: left;
         width: 100%;
     }
 
